welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: not found: value compteurA
compteurA = Math.abs(a - 10)
^close10:3: error: not found: value compteurB
compteurB = Math.abs(b - 10)
^close10:4: error: not found: value compteurA
	if (compteurA <= compteurB) {
            ^close10:4: error: type mismatch;
 found   : Unit
 required: Int
	if (compteurA <= compteurB) {
        ^