welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
compteurA = Math.abs(a - 10)
compteurB = Math.abs(b - 10)
	if (compteurA <= compteurB) {
		return a
	}
}